Style/bug fix: ColorChangeInput text visible now

--- a/src/Components/ColorChangeInput.css
+++ b/src/Components/ColorChangeInput.css
@@ -28,3 +28,8 @@
     bottom: 0px;
     left: 0px;
 }
+
+.chrome-picker input {
+    background-color: rgb(224, 224, 224);
+    color: black;
+}
